--- a/src/components/quotes/NoQuotesFound.module.css
+++ b/src/components/quotes/NoQuotesFound.module.css
@@ -1,4 +1,4 @@
-.noquotes {
+.nquotes {
   height: 20rem;
   margin: auto;
   display: flex;
@@ -9,7 +9,7 @@
   align-items: center;
 }
 
-.noquotes p {
+.nquotes p {
   color: #262c2c;
   font-size: 3rem;
   font-weight: bold;
